2011-02-11  Mike Reed  <reed@google.com>

Reviewed by James Robinson.

        Fix toDataURL() to use device->readPixels() if need be, rather than always dereferencing
        the address returned by getPixels() (as the device may not be backed by a CPU bitmap)
        https://bugs.webkit.org/show_bug.cgi?id=54224

        No new tests. Existing canvas tests exercise this...
        fast/canvas/script-tests/canvas-createPattern-fillRect-shadow.html

        * platform/graphics/skia/ImageBufferSkia.cpp:
        (WebCore::ImageBuffer::toDataURL):

Canonical link: https://commits.webkit.org/68365@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78356 268f45cc-cd09-0410-ab3c-d52691b4dbfc